Clean Up - Remove libs and use Bower instead - Add grunt to minify the libs - Put new lorem ipsum picture to replace the one what wasent working anymore.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-	"author": "Jerome D.Soucy (http://jeromeds.com)",
-	"name": "moza",
-	"description": "Our goal is to operate this CDN in a peer reviewed fashion.",
-	"version": "1.0.0",
-	"homepage": "https://github.com/jeromeds/Moza",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/jeromeds/Moza.git"
-	}
+  "author": "Jerome D.Soucy (http://jeromeds.com)",
+  "name": "moza",
+  "description": "Our goal is to operate this CDN in a peer reviewed fashion.",
+  "version": "1.0.0",
+  "homepage": "https://github.com/jeromeds/Moza",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jeromeds/Moza.git"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-uglify": "~0.2.2"
+  }
 }
