--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "https://github.com/jeromeds/Moza.git"
   },
   "devDependencies": {
+    "debug": "^2.2.0",
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.2",
     "gulp": "^3.9.0",
