--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-less": "^3.0.3",
     "gulp-open": "^0.3.2",
-    "gulp-watch": "^4.2.4"
+    "gulp-watch": "^4.2.4",
+    "debug": "~2.2.0"
   }
 }
