--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-less": "^3.0.3",
     "gulp-open": "^0.3.2",
     "gulp-watch": "^4.2.4",
-    "gulp-babel": "~5.1.0"
+    "gulp-babel": "~5.1.0",
+    "gulp-sass": "~2.0.3"
   }
 }
