--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "devDependencies": {
     "debug": "^2.2.0",
     "gulp": "^3.9.0",
+    "gulp-babel": "~5.1.0",
     "gulp-connect": "^2.2.0",
     "gulp-less": "^3.0.3",
     "gulp-open": "^0.3.2",
-    "gulp-watch": "^4.2.4",
-    "gulp-babel": "~5.1.0",
-    "gulp-sass": "~2.0.3"
+    "gulp-sass": "~2.0.3",
+    "gulp-watch": "^4.2.4"
   }
 }
