--- a/package.json
+++ b/package.json
@@ -1,21 +1,35 @@
 {
-  "author": "Jerome D.Soucy (http://jeromeds.com)",
+  "author": "Jerome D.Soucy <hello@jeromeds.ocm> (http://jeromeds.com)",
   "name": "moza",
-  "description": "Our goal is to operate this CDN in a peer reviewed fashion.",
+  "description": "Generate random mosaic",
   "version": "1.0.0",
+  "license": "MIT",
   "homepage": "https://github.com/jeromeds/Moza",
   "repository": {
     "type": "git",
     "url": "https://github.com/jeromeds/Moza.git"
   },
-  "devDependencies": {
-    "debug": "^2.2.0",
-    "gulp": "^3.9.0",
+  "bugs": {
+    "url": "https://github.com/jeromeds/Moza/issues"
+  },
+  "main": "index.js",
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {
     "gulp-babel": "~5.1.0",
-    "gulp-connect": "^2.2.0",
-    "gulp-less": "^3.0.3",
-    "gulp-open": "^0.3.2",
+    "gulp-jasmine": "~2.0.1",
     "gulp-sass": "~2.0.3",
-    "gulp-watch": "^4.2.4"
-  }
+    "gulp-open": "~0.3.2",
+    "gulp-connect": "~2.2.0",
+    "gulp": "~3.9.0",
+    "gulp-less": "~3.0.3",
+    "gulp-watch": "~4.2.4"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "mosaic"
+  ]
 }
