--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 sudo: required
 language: node_js
-cache:
-  directories:
-  - node_modules
 node_js:
- - iojs
- - "0.10"
- - "0.12"
+  - "0.10"
+before_script:
+  - npm install -g gulp
+script: gulp
