--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "babelify": "^6.1.3",
     "browser-sync": "^2.8.0",
     "browserify": "^11.0.0",
+    "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-exit": "0.0.2",
     "gulp-flatten": "^0.1.1",
     "gulp-header": "^1.2.2",
+    "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^1.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
